connect react app to graphql api

--- a/webapi/src/GraphQLApi/GraphQLApi.csproj
+++ b/webapi/src/GraphQLApi/GraphQLApi.csproj
@@ -7,5 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="HotChocolate.AspNetCore" Version="10.4.0" />
+    <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.4.0" />
   </ItemGroup>
 </Project>
