--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.41",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,6 +15,9 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.2.0",
     "typescript": "^3.7.5"
+  },
+  "devDependencies": {
+    "graphql": "14.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
