--- a/webapi/src/GraphQLApi/GraphQLApi.csproj
+++ b/webapi/src/GraphQLApi/GraphQLApi.csproj
@@ -6,7 +6,12 @@
     <UserSecretsId>57878e858f08c2d207d8af0397c6aef8</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="1.4.0" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="10.4.0" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.4.0" />
+    <PackageReference Include="log4net" Version="2.0.8" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\kafka-stream-net\core\kafka-stream-core.csproj" />
   </ItemGroup>
 </Project>
